# rtsbot

./: .example-env  .example-screeps.yaml  .gitignore  Cargo.toml  README.md  config.yml  docker-compose.yml  example.screeps.yaml  gulpfile.js  package.json
javascript/: main.js
js_src/: client_scripts.js  main.js
js_tools/: benchmark.js  deploy.js
src/: lib.rs  logging.rs  movement.rs  role.rs  task.rs  worker.rs
src/movement/: callbacks.rs  goal.rs  movement_goal.rs  path_state.rs
src/role/: builder.rs  hauler.rs  source_harvester.rs  spawn.rs  startup.rs  tower.rs  upgrader.rs
src/task/: build.rs  harvest.rs  logistics.rs  repair.rs  spawn.rs  upgrade.rs
src/worker/: builder.rs  hauler.rs  source_harvester.rs  spawn.rs  tower.rs  upgrader.rs
