[package]
name = "screeps-starter-rust"
version = "0.0.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
enum_dispatch = "0.3"
fern = "0.6"
js-sys = "0.3"
log = "0.4"
# screeps-game-api = "0.12"
# For development of local modifications to the api crate, you'll want to use
# a local path to a clone instead, eg:
screeps-game-api = { path = "../screeps-game-api" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# Replace the following to enable wasm-opt optimization
# wasm-pack will try to install wasm-opt automatically, but it must be installed by hand on some
# operating systems.
wasm-opt = false
# See wasm-opt for full available options; handy examples:
# -O4 - optimize aggressively for performance
# -Oz - optimize aggressively for code size
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --disable-sign-ext - prevents opcodes that the screeps servers can't load (see 
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
#wasm-opt = ["-O4", "--disable-sign-ext"]

[features]
default = []

path-visuals = []
sim = ["screeps-game-api/sim"]
